<resources>
    <string name="app_name">Lawyer Professional Academy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="courses">Courses</string>
    <string name="settings">Settings</string>
    <string name="rehabilitation_programs">Rehabilitation Programmes</string>
    <string name="advanced_programs">Advanced Programmes</string>
    <string name="my_program">My Programme</string>
    <string name="application">Application</string>
    <string name="account_settings">Account Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="security_settings">Security Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="usage_policies">Usage Policies</string>
    <string name="about_app">About App</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_e_mail">Enter Your E-mail</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register Now</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="already_have_account">Already have account</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_code">Enter Code</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="shareGoogleMSG">Link to the application on Google Play</string>
    <string name="we_are_send_email_content_confirm_code_nplease_get_to_continue_register_you_account">We are send email content Confirm Code.\nPlease Get To continue Register You Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="services">Services</string>
    <string name="news_board">News Board</string>
    <string name="about_application">About Application</string>

    <string name="phone">Phone</string>
    <string name="facebook">FaceBook</string>
    <string name="messanger">Messanger</string>
    <string name="whats_app">Whats App</string>
    <string name="web_site">Web Site</string>
    <string name="youtube">YouTube</string>

    <string name="please_choose_the_language">Please choose the language</string>
    <string name="please_choose_the_currency">Please choose the Currency</string>
    <string name="please_choose_the_country">Please choose the Country</string>
    <string name="egypt">Egypt</string>
    <string name="egp">EGP</string>
    <string name="get_new_password">Get New Password</string>
    <string name="application_statistics">Application Statistics</string>
    <string name="lectures_ended">Lectures Ended</string>
    <string name="lectures_upcoming">Lectures Upcoming</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="menu">Menu</string>
    <string name="programmes">Programmes</string>
    <string name="programme_details">Programme Details</string>
    <string name="overview">Overview</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="live_lecture">Live Lecture</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="other_news">Other News</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="email_verification">Email Verification</string>

</resources>