<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="shady.samir.lawyerprofessionalacademy.View.Home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_courses"
            app:destination="@id/navigation_courses" />
    </fragment>

    <fragment
        android:id="@+id/navigation_courses"
        android:name="shady.samir.lawyerprofessionalacademy.View.Home.ui.CoursesFragment"
        android:label="@string/courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="shady.samir.lawyerprofessionalacademy.View.Home.ui.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="shady.samir.lawyerprofessionalacademy.View.Home.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>