<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/banner"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black"
        android:alpha=".2"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:text="@string/news_board"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28dp"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/title_notifications"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24dp"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/btnSignin"
            style="@style/btnStyleHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:paddingHorizontal="32dp"
            android:text="@string/share_app"
            android:textSize="17dp" />

    </LinearLayout>

</RelativeLayout>