<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginSystem.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/logoCon"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".5"
                android:scaleType="centerCrop"
                android:src="@drawable/banner2"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".2"
                android:scaleType="centerCrop"
                android:src="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:src="@drawable/logo"
                app:tint="@color/white" />


            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="@color/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toolbar_back"
                    android:visibility="gone"
                    android:alpha=".5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/txtColor3"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_your_name"
                        android:textColorHint="@color/txtColor1"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="@color/inputBoxColor"
                        app:hintTextColor="@color/txtColor1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textColor="@color/txtColor1"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_your_phone"
                        android:textColorHint="@color/txtColor1"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="@color/inputBoxColor"
                        app:hintTextColor="@color/txtColor1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:textColor="@color/txtColor1"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_your_e_mail"
                        android:textColorHint="@color/txtColor1"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="@color/inputBoxColor"
                        app:hintTextColor="@color/txtColor1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/txtColor1"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_your_address"
                        android:textColorHint="@color/txtColor1"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="@color/inputBoxColor"
                        app:hintTextColor="@color/txtColor1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/txtColor1"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/enter_your_password"
                        android:textColorHint="@color/txtColor1"
                        app:boxStrokeWidth="1dp"
                        app:hintTextColor="@color/txtColor1"
                        app:passwordToggleEnabled="true"
                        app:boxStrokeColor="@color/inputBoxColor"
                        app:passwordToggleTint="@color/txtColor3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/txtColor1"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/btnSignin"
                        style="@style/btnStyleHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:paddingHorizontal="32dp"
                        android:text="@string/register"
                        android:textSize="17dp" />

                    <LinearLayout
                        android:id="@+id/btnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/already_have_account"
                            android:textColor="@color/txtColor3"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/txtColor5"
                            android:textSize="16dp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>