<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginSystem.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/logoCon"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".5"
                android:scaleType="centerCrop"
                android:src="@drawable/banner2"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".2"
                android:scaleType="centerCrop"
                android:src="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="16dp"
                android:src="@mipmap/ic_launcher_round" />

            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="@color/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toolbar_back"
                    android:visibility="gone"
                    android:alpha=".5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/txtColor3"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/enter_your_e_mail"
                        android:textColorHint="@color/txtColor1"
                        app:hintTextColor="@color/txtColor1"
                        app:boxStrokeColor="@color/inputBoxColor"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/white"
                        android:layout_margin="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:textSize="14sp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/txtColor1"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/btnSignin"
                        style="@style/btnStyleHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp"
                        android:paddingHorizontal="32dp"
                        android:text="@string/get_new_password"
                        android:textSize="17dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>